server/http/css/main.css
/* ... */
[data-nostalgia] {
    background-image: url('../img/goat.png') !important;
    background-color: rgba(0, 0, 0, .5) !important;
    background-size: auto 100% !important;
    text-shadow: 0px 0px 19px black;
    background-repeat: no-repeat !important;
    border: 1px solid pink;
}

.started[data-nostalgia] {
    background-image: url('../img/outnewgiohtoken.png') !important;
    background-color: rgba(0, 0, 0, .5) !important;
    border: 1px solid grey;
    color: grey;
}

div#news {
    /* width: 80%; */
    
    margin: 0 auto;
    color: white;
    height: 85vh;
    overflow-y: scroll;
    padding-left: 10%;
    padding-right: 10%;
    text-shadow: 0 0 5px black;
}

select {
    width: 12em;
}

.game:not(.started) {
    /*-webkit-animation: outpulse 300ms;*/
}

header#deckedit div {
    font-size: 12px;
    /*    border: 1px solid white;*/
    
    float: left;
    color: white;
    background: rgba(0, 0, 0, .50);
}

div#de_column1 {
    height: 100%;
    width: 300px;
}

div#cardpic {
    height: 300px;
    margin: 10px;
    width: 200px;
    border: 1px solid white;
}

div#cardinfo {
    min-height: 242px;
    width: 100%;
    border-style: dashed;
    background-color: rgba(0, 0, 0, .95);
}

div#cardfilter {
    width: 100%;
}

div#de_column2 {
    margin-left: 10px;
    width: 800px;
    height: 100%;
}

div#de_searchresults {
    height: 461px;
    overflow-y: scroll;
    width: 228px;
    border: 1px solid white;
}

div#de_maincolumn {}

div#searchresult {
    width: 180px;
    height: 430px;
}

div#maindecksummary {
    width: 500px;
    border: 1px solid white;
    margin-top: 2px;
}

div#xtradecksummary {
    width: 500px;
    border: 1px solid white;
    margin-top: 2px;
}

div#sidedecksummary {
    width: 500px;
    border: 1px solid white;
    margin-top: 2px;
}

div#resultecksummary {
    float: none;
    width: 100%;
    border: none;
    border-bottom: 1px solid white;
}

div#cardfilter {
    height: 100px;
}

div#maindeck {
    height: 300px;
    width: 500px;
    border: 1px solid white;
    margin-top: 2px;
}

div#xtradeck {
    height: 60px;
    width: 500px;
    border: 1px solid white;
    margin-top: 2px;
}

div#sidedeck {
    height: 60px;
    width: 500px;
    border: 1px solid white;
    margin-top: 2px;
}

div#deckwrapper {
    width: 1147px;
    margin: 0 auto;
    float: none !important;
    border: 1px solid white;
    overflow: auto;
    padding: 0 10px;
}

@-webkit-keyframes outpulse {
    from {
        -webkit-box-shadow: 0 0 3px rgba(255, 255, 255, 0);
    }
    50% {
        -webkit-box-shadow: 0 0 18px white;
    }
    to {
        #ccc;
        -webkit-box-shadow: 0 0 3px rgba(255, 255, 255, 0);
    }
}

footer.superfooter.loud {
    color: white;
    font-size: 14px;
    font-weight: bold;
}

.webonly {}

.web .launcheronly {
    display: none;
}

.unlogged .launcheronly {
    display: none;
}

.unlogged .launcheronly.loginsystem {
    display: inline-block;
}

a.launcheronly.loginsystem {
    color: white;
}

.launcheronly.gamelistcenter {
    margin-top: 6px;
}

#ips_username,
#ips_password {
    margin: 20px auto;
    background: rgba(255, 255, 255, .5);
    border: none;
    width: 20em;
    padding: .4em;
    text-align: center;
    color: black !important;
    font-weight: bold;
    -webkit-animation-name: pulse;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count: 10;
}

#ips_username {
    border-top-left-radius: 8px;
    border-bottom-left-radius: 20px;
}

#ips_password {
    border-top-right-radius: 8px;
    border-bottom-right-radius: 20px;
}

.unlogged input#login-username {
    display: block;
}

@-webkit-keyframes pulse {
    from {
        background-color: #ccc;
        -webkit-box-shadow: 0 0 3px #333;
    }
    50% {
        background-color: white;
        -webkit-box-shadow: 0 0 50px white;
    }
    to {
        background-color: #ccc;
        -webkit-box-shadow: 0 0 3px #333;
    }
}

.unlogged.in-iframe .loophole {
    display: none;
}

.shine {
    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #000000), color-stop(38%, #000000), color-stop(38%, #000000), color-stop(44%, #ee44aa), color-stop(49%, #ffffff), color-stop(51%, #000000), color-stop(100%, #000000));
    -webkit-background-size: 50% 100%;
    color: rgba(255, 255, 255, 0.1);
    -webkit-background-clip: text;
    -webkit-animation-name: shine;
    -webkit-animation-duration: 10s;
    -webkit-animation-iteration-count: 10;
    -webkit-animation-timing-function: linear;
}

.gamelistcenter {
    width: 30%;
    margin: 0 auto;
    border: 1px solid#444;
    color: silver;
    padding: 10px;
}

.gamelistcenter select {
    background: rgba(0, 0, 0, .5);
    color: white;
}

.web .gamelistcenter {
    display: none;
}

@-webkit-keyframes shine {
    0% {
        background-position: top left;
    }
    50% {
        background-position: top right;
    }
    0% {
        background-position: top left;
    }
}

audio#podcast {
    position: absolute;
    bottom: 17px;
    background: black;
}

#news {
    height: 427px;
}

.web #news {
    height: 85;
}

